# linuxdev2025

./: .gitignore
01_TerminalProject/: Makefile  Show  Show.c
02_Multifile/: Makefile  README
03_Text/: README.md  calendar.txt  randomize.sh
04_Debugging/: Makefile  gdb_script1.gdb  gdb_script2.gdb  range.c
05_Regexps/: README.md  esub.c  test.sh
06_Tracing/: Makefile  move.c  protect.c
07_Environmental/: .gitignore  Makefile.am  configure.ac
07_Environmental/src/: Makefile.am  rhasher.c
08_I18n/: CMakeLists.txt  run.sh
08_I18n/po/: ru.po
08_I18n/src/: guess.c
09_PatchDiff/: 0001-Add-first-argument.patch  0002-Add-custom-walls-and-passways.patch  0003-Add-seed-as-argument.patch  Makefile  main.c
10_LibTesting/: configure.ac
10_LibTesting/src/: grow.h  libgcov_abort.c  libgrow.c
10_LibTesting/tests/: tests.c
11_Documenting/: Doxyfile.in  Makefile.am  configure.ac
11_Documenting/po/: POTFILES.in  ru.po
11_Documenting/src/: Makefile.am  guess.c  roman.c
